--- a/css/Login.css
+++ b/css/Login.css
@@ -31,7 +31,7 @@ body {
   .brand {
     padding: 20px;
     background-color: #2a2a72;
-    background-image: linear-gradient(315deg, #1919afd0 0%, #069af0dc 74%), url("https://images.pexels.com/photos/3815585/pexels-photo-3815585.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-image: linear-gradient(315deg, #00b4d8c9 0%, #90e1efda 74%), url("https://images.pexels.com/photos/3815585/pexels-photo-3815585.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     background-size: cover;
     background-position: center center;
     color: #fff;
@@ -53,7 +53,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    background-image: linear-gradient(315deg, #1d1db3d2 0%, #069af0dc 74%), url("https://images.pexels.com/photos/3815585/pexels-photo-3815585.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-image: linear-gradient(315deg, #00b4d8c9 0%, #90e1efda 74%), url("https://images.pexels.com/photos/3815585/pexels-photo-3815585.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
     z-index: -1;
   }
 
@@ -141,10 +141,10 @@ body {
     position: relative;
   }
   .form form .form-group.hasError input {
-    border-color: #00a0fd !important;
+    border-color: #0096C7 !important;
   }
   .form form .form-group.hasError label {
-    color: #00a0fd !important;
+    color: #0096C7 !important;
   }
   .form form label {
     font-size: 12px;
@@ -178,10 +178,10 @@ body {
     z-index: 1;
   }
   .form form input:not([type=submit]).hasError {
-    border-color: #00a0fd;
+    border-color: #0096C7;
   }
   .form form span.error {
-    color: #00a0fd;
+    color: #0096C7;
     font-family: "Montserrat", sans-serif;
     font-size: 12px;
     position: absolute;
@@ -190,7 +190,7 @@ body {
     display: none;
   }
   .form form input[type=password] {
-    color: #00a0fd;
+    color: #0096C7;
   }
   .form form .CTA {
     margin-top: 30px;
@@ -199,7 +199,7 @@ body {
     font-size: 12px;
     text-transform: uppercase;
     padding: 5px 30px;
-    background: #00a0fd;
+    background: #0096C7;
     color: #fff;
     border-radius: 30px;
     margin-right: 20px;
@@ -216,7 +216,7 @@ body {
     transition: all 0.3s;
   }
   .form form .CTA a.switch:hover {
-    color: #00a0fd;
+    color: #0096C7;
   }
 
   /* For responsive Design */
