--- a/css/Login.css
+++ b/css/Login.css
@@ -26,7 +26,8 @@ body {
   section#formHolder {
     padding: 50px 0;
   }
-  
+
+  /*  ***************  Brand Section  Starts******************** */
 
   .brand {
     padding: 20px;
@@ -105,6 +106,9 @@ body {
     color:#fff;
   }
   
+/*  ***************  Brand Section  Ends ******************** */
+
+/*  *************** Login-Form Starts ******************** */
   .form {
     position: relative;
   }
@@ -140,12 +144,7 @@ body {
     margin-bottom: 5px;
     position: relative;
   }
-  .form form .form-group.hasError input {
-    border-color: #0096C7 !important;
-  }
-  .form form .form-group.hasError label {
-    color: #0096C7 !important;
-  }
+  
   .form form label {
     font-size: 12px;
     font-weight: 400;
@@ -180,7 +179,7 @@ body {
   .form form input:not([type=submit]).hasError {
     border-color: #0096C7;
   }
-  .form form span.error {
+  /* .form form span.error {
     color: #0096C7;
     font-family: "Montserrat", sans-serif;
     font-size: 12px;
@@ -188,7 +187,7 @@ body {
     bottom: -20px;
     right: 0;
     display: none;
-  }
+  } */
   .form form input[type=password] {
     color: #0096C7;
   }
@@ -218,6 +217,105 @@ body {
   .form form .CTA a.switch:hover {
     color: #0096C7;
   }
+
+/*  *************** Login-Form Ends ******************** */
+
+
+/*  *************** Register-Form Starts ******************** */
+
+.card-like {
+  overflow: scroll;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 6px;
+  padding: 50px;
+}
+
+.btn-irv {
+  width: 100%;
+  background: #038dab;
+  color: #fff !important;
+  font-weight: bold;
+  padding: 10px 0;
+  transition: all 0.3s;
+}
+.btn-irv:hover {
+  background: #02738d;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.btn-irv-default {
+  font-weight: bold;
+  background: #bbb;
+  color: #fff !important;
+}
+.btn-irv-default:hover {
+  background: #aaa;
+}
+
+.wizard {
+  overflow: hidden;
+}
+.wizard .wizard-header {
+  margin-bottom: 40px;
+}
+
+.wizard .wizard-header hr {
+  border-color: #038dab;
+  border-top-width: 2px;
+}
+.wizard .wizard-header .steps {
+  height: 25px;
+}
+.wizard .wizard-header .steps .wizard-step {
+  background: #038dab;
+  width: 40px;
+  padding: 8px;
+  height: 40px;
+  display: inline-block;
+  margin: 0 10px;
+  opacity: 0.2;
+  border-radius: 50%;
+  transition: all 0.8s;
+  color: white;
+}
+.wizard .wizard-header .steps .wizard-step.active {
+  opacity: 1;
+}
+.wizard .wizard-body {
+  position: relative;
+  transition: all 0.3s cubic-bezier(0.68, -0.3, 0.37, 0.6);
+}
+.wizard .wizard-body .step {
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  right: -100%;
+  opacity: 0;
+}
+.wizard .wizard-body .step.initial {
+  position: relative;
+}
+.wizard .wizard-body .step.off {
+  opacity: 0 !important;
+  right: 100% !important;
+}
+.wizard .wizard-body .step.active {
+  right: 0;
+  margin-left: 0;
+  margin-top: 0;
+  opacity: 1;
+  transition: all 0.4s linear;
+  transition-delay: 0.1s;
+}
+
+.wizard .wizard-footer {
+  margin-top: 40px;
+}
+
+
+/*  *************** Register-Form Ends ******************** */
 
   /* For responsive Design */
   
@@ -269,12 +367,19 @@ body {
       padding: 60px;
       left: 50%;
     }
+    
+  .signup-form{
+    width:100px;
+    overflow-y: auto;
+    height: 100%;
+  }
   }
 
   @media only screen and (max-width: 760px) {
    .brand{
      height: 250px;
    }
+  
   }
 
   @media (max-width: 480px) {
@@ -285,6 +390,12 @@ body {
   
     h2 {
       font-size: 50px !important;
+    }
+    .signup-form{
+  
+      width:100px;
+      overflow-y: auto;
+      height: 100%;
     }
   }
 
