--- a/css/Login.css
+++ b/css/Login.css
@@ -179,15 +179,7 @@ body {
   .form form input:not([type=submit]).hasError {
     border-color: #0096C7;
   }
-  /* .form form span.error {
-    color: #0096C7;
-    font-family: "Montserrat", sans-serif;
-    font-size: 12px;
-    position: absolute;
-    bottom: -20px;
-    right: 0;
-    display: none;
-  } */
+
   .form form input[type=password] {
     color: #0096C7;
   }
@@ -317,7 +309,7 @@ body {
 
 /*  *************** Register-Form Ends ******************** */
 
-  /* For responsive Design */
+  /* ************** For responsive Design  ********************* */
   
   @media (max-width: 768px) {
     .container {
@@ -398,6 +390,114 @@ body {
       height: 100%;
     }
   }
+
+
+  
+
+
+  .form form label.activ {
+    transform: translateY(10px);
+    font-size: 10px;
+  }
+
+  
+  .card-lik {
+    overflow: scroll;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 6px;
+    padding: 50px;
+  }
+  
+  .btn-irv {
+    width: 100%;
+    background: #038dab;
+    color: rgb(255, 255, 255) !important;
+    font-weight: bold;
+    padding: 10px 0;
+    transition: all 0.3s;
+  }
+  .btn-irv:hover {
+    background: #02738d;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  }
+  
+  .btn-irv-default {
+    font-weight: bold;
+    background: #bbb;
+    color: #fff !important;
+  }
+  .btn-irv-default:hover {
+    background: #aaa;
+  }
+  
+  .wizard {
+    overflow: hidden;
+  }
+  .wizard .wizard-headr {
+    margin-bottom: 40px;
+  }
+  
+  .wizard .wizard-headr hr {
+    border-color: #038dab;
+    border-top-width: 2px;
+  }
+  .wizard .wizard-headr .stps {
+    height: 25px;
+  }
+  .wizard .wizard-headr .stps .wizard-stp {
+    background: #038dab;
+    width: 40px;
+    padding: 8px;
+    height: 40px;
+    display: inline-block;
+    margin: 0 10px;
+    opacity: 0.2;
+    border-radius: 50%;
+    transition: all 0.8s;
+    color: white;
+  }
+  .wizard .wizard-headr .stps .wizard-stp.activ {
+    opacity: 1;
+  }
+  .wizard .wizard-bdy {
+    position: relative;
+    transition: all 0.3s cubic-bezier(0.68, -0.3, 0.37, 0.6);
+  }
+  .wizard .wizard-bdy .stp {
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    right: -100%;
+    opacity: 0;
+  }
+  .wizard .wizard-bdy .stp.initl {
+    position: relative;
+  }
+  .wizard .wizard-bdy .stp.of {
+    opacity: 0 !important;
+    right: 100% !important;
+  }
+  .wizard .wizard-bdy .stp.activ {
+    right: 0;
+    margin-left: 0;
+    margin-top: 0;
+    opacity: 1;
+    transition: all 0.4s linear;
+    transition-delay: 0.1s;
+  }
+  
+  .wizard .wizard-footer {
+    margin-top: 40px;
+  }
+
+
+
+
+
+
+
 
 
   
